Implements game duplicate validation, adds authorization
