# routes/gameRoute.js
@@ -1,16 +1,23 @@
 import { Router } from "express";
 import { getAllGames, getGameById, createGame, updateGame, deleteGame } from "../controllers/gameController.js";
+import JWTVerify from "../middleware/JWTVerify.js";
+import verifyRole from "../middleware/VerifyRole.js";
 
 const router = Router();
 
-router.route('/all')
-    .get(getAllGames)
 
+
+router.route('/all')
+.get(getAllGames)
+
+
+router.route('/').get(getGameById)
+
+router.use(JWTVerify);
 router.route('/')
-    .get(getGameById)
-    .post(createGame)
-    .patch(updateGame)
-    .delete(deleteGame)
+    .post(verifyRole('admin'), createGame)
+    .patch(verifyRole('admin'), updateGame)
+    .delete(verifyRole('admin'), deleteGame)
 
 
 export default router;
